# src/routes/notice.router.ts
@@ -44,7 +44,8 @@ router.get("/", async (_req, res) => {
     String(_req.query.timeEnd || null),
     String(_req.query.operationId || null),
     String(_req.query.filter || null),
-    Boolean(_req.query.totalRows || false)
+    Boolean(_req.query.totalRows || false),
+    Boolean(Number(_req.query.isActive) || false),
   );
   const results = JSON.parse(JSON.stringify(response));
   results.map((result: any) => {
